# fish-env-control-system

./: .gitignore  .graphify_detect.json  AGENTS.md  CMakeLists.txt  DESIGN.md  PLAN.md  PRODUCT.md  README.md  REFERENCE.md  ROADMAP.md  TEMPLATE.md  extract_task.py  hardware_simulator.py  lessons.md  migrate.py  mock_server.py  partitions.csv  partitions_esp32.csv  partitions_esp32s3.csv  patch.js  patch_app.js  patch_app_21.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  trade-off-report.md  update_server.py
.impeccable/critique/: 2026-06-02T22-07-55Z__main-static-style-css.md
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ap-auto-stop-not-closing.md  ap-not-starting-after-boot.md  knowledge-base.md  test-on-lockout-pending.md  tft-stuck-on-booting.md  wifi-ap-sta-longrun-stuck.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md
.planning/notes/: owner-installer-ui-shape.md  tft-display-driver-choice.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/tmp/: docs-work-manifest.json
audit_reports/: .gitignore
components/app_config/: app_config.h  secrets.h.template
components/cooling_control/: CMakeLists.txt  cooling_control.c  cooling_control.h  idf_component.yml
components/dns_server/: CMakeLists.txt  dns_server.c  dns_server.h
components/hardware_map/: CMakeLists.txt  hardware_map.c  hardware_map.h
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  components.md  development-notes.md  esp32_modern_web_app.html  hardware.md  manual.html  manual_print.html
main/: CMakeLists.txt  app_main.c  app_main.h  dns_server.c  dns_server.h  idf_component.yml  netif_helper.c  netif_helper.h  nvs_store.h  tft_display.c  tft_display.h  web_server.c  web_server.h  wifi_manager.h
main/static/: app.js  dashboard.html  hardware.html  index.html  login.html  status.html  style.css  wifi.html
scripts/: ERASE_FLASH.bat  FLASH.bat  README_customer.md  README_customer.txt  README_ลูกค้า.md  README_ลูกค้า.txt  SHOW_PASSWORD.bat  build.ps1  build_short.ps1  download_fonts.py  encrypt_ota.py  erase_flash.ps1  flash.ps1  flash_and_show.ps1  flash_com5.ps1  generate_secrets.ps1  monitor-soak.ps1  optimize_assets.py  package.ps1  serial_bridge.py  show_ap_password.ps1  show_password.ps1
tests/: test_hardware_map_policy.py  test_min_dwell.py  test_ui_phase13.py  test_ui_phase16.py
(+395 files in other folders)
