idf_component_register(
    SRCS
        "app_main.c"
        "web_server.c"
        "dns_server.c"
        "tft_display.c"
    INCLUDE_DIRS
        "."
    EMBED_FILES
        "static/index.html"
        "static/style.css"
        "static/app.js"
    REQUIRES
        app_config
        cooling_control
        hardware_map
        nvs_store
        pump_control
        session
        wifi_manager
        esp_http_server
        esp_wifi
        cjson
        mdns
        esp_lcd
)
